fix homepage spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,8 @@ html {
     text-box-edge: cap alphabetic;
   }
   h4,
-  button {
+  button,
+  button * {
     font-family: var(--font-orator-std);
     font-size: var(--text-xl);
     line-height: 1.5;
